# frankie

./: .gitattributes  .gitignore  LICENSE  README.md  debug.frankie  draft.frankie
.github/: manual-create-release-tag.bash
.github/actions/: transpiler_dynamic_build.yml
.github/workflows/: _transpiler_dynamic_build.yml  _transpiler_linux_build.yml  _transpiler_mac_build.yml  _transpiler_unix_like_build.yml  _transpiler_windows_build.yml  build_transpiler.yml  build_vscode_extension.yml  release.yml  release_assets.yml  transpiler.yml  transpiler_debug_build.yml  transpiler_release_build.yml  vscode_extension.yml
.github/workflows/transpiler/: transpiler_dynamic_build.yml
supplements/: icons.fig
supplements/VSCode-Extension/: CHANGELOG.md  package-lock.json  package.json
supplements/VSCode-Extension/scripts/: extension.js
supplements/VSCode-Extension/syntaxes/: polarfrankie.tmLanguage.json
supplements/VSCode-Extension1/scripts/: commands.js
supplements/vscode-extension/: CHANGELOG.md  README.md
transpiler/: CMakeLists.txt  dependencies.cmake  manifest.ini  package.json
transpiler/cmake/: build-executable.cmake  build-output.cmake  cmake-extra.cmake  debug-mode.cmake  dependencies.cmake  generate-ANTLR4-files.cmake  libraries.cmake  static-libraries.cmake  test-executable.cmake  transpiler-build-executable.cmake  utility.cmake
transpiler/cmake/ANTLR4/: ExternalAntlr4Cpp.cmake  generate.cmake
transpiler/cmake/ANTLR4/patches/: antlr4_runtime_patch__CMakeLists.txt.diff  antlr4_runtime_patch__ProfilingATNSimulator.cpp.diff  antlr4_runtime_patch__project.pbxproj.diff
transpiler/cmake/compiler/: cpp.cmake
transpiler/cmake/other/: legal.cmake  other.cmake
transpiler/cmake/version/: VersionInfo.Rc.in
transpiler/source/: README.md  actions.base.cpp  actions.base.hpp  actions.cpp  actions.hpp  config.base.cpp  config.base.hpp  config.cpp  config.hpp  dynamic.hpp  info.base.cpp  info.base.hpp  info.cpp  info.hpp  main.cpp
transpiler/source/ANTLR4/: LexerBuiltinTypes.g4  LexerFragments.g4  LexerIdentifiers.g4  LexerIdentifiersFragments.g4  LexerIgnores.g4  LexerKeywords.g4  LexerLiterals.g4  LexerSymbols.g4  PolarFrankieLexer.g4  PolarFrankieParser.g4  README.md  actions.debug.js
transpiler/source/common/: README.md  debug.cpp  debug.hpp  dynamic.hpp  files.cpp  files.hpp  headers.hpp  strings.cpp  strings.hpp
transpiler/source/comms/: README.md  comms.cpp  comms.hpp  dynamic.hpp
transpiler/source/comms/CLI/: README.md  basic.cpp  basic.hpp  finalize.cpp  finalize.hpp  initialize.cpp  initialize.hpp  report.cpp  report.hpp
transpiler/source/comms/LSP/: README.md
transpiler/source/old-ANTLR4/: LexerFragments.g4  LexerKeywords.g4  LexerLiterals.g4  PolarFrankieParser.g4
transpiler/source/parser/: README.md  dynamic.hpp  main-debug.cpp  parser.cpp  parser.hpp
transpiler/source/parser/ANTLR4/: LexerIdentifiers.g4  LexerIdentifiersFragments.g4  LexerIgnores.g4  LexerKeywords.g4  LexerLiterals.g4  LexerSymbols.g4  PolarFrankieLexer.g4  PolarFrankieParser.g4
transpiler/source/parser/listeners/: base.cpp  base.hpp  errors.cpp  errors.hpp
transpiler/tests/: README.md
transpiler/tests/captures/: output.frankie  script.frankie
transpiler/tests/command-statement/: .test.cmake  basic.test.cmake  statement!s.frankie
transpiler/tests/grouping/: .test.cmake  basic.test.cmake  expressions-groups.frankie  output-capture!s.frankie  script-capture!s.frankie
transpiler/tests/types/basic/: .test.cmake  basic.test.cmake  booleans.frankie  numbers.frankie  strings.frankie
transpiler/tools/antlr4-build/: README.md  build.bat
(+3 files in other folders)
